# beammeup

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
include/beammeup/: Receiver.h  Thread.h  Types.h  Variant.h  VariantMap.h
source/: ArbitraryPointer.cpp  ArbitraryPointer.h  Receiver.cpp  Signaler.cpp  Signaler.h  Thread.cpp  Thread.h  Transporter.cpp  Transporter.h  Variant.cpp  VariantVector.cpp  VariantVector.h
tests/: TestArbitraryPointer.cpp  TestSignals.cpp  TestThread.cpp  TestTransporter.cpp  TestVariant.cpp
tests/mocks/: MockMutex.h  MockTransporter.h
tests/stubs/: StubSmartObject.cpp  StubSmartObject.h  StubTrackedPointer.cpp  StubTrackedPointer.h
